After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 795490 - encoding-profile: Fix deserialization of a single profile
encoding-profile: Fix deserialization of a single profile
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
unspecified
Other All
: Normal normal
: 1.15.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2018-04-23 21:01 UTC by Thibault Saunier
Modified: 2018-05-14 14:32 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
encoding-profile: Fix deserialization of a single profile (6.93 KB, patch)
2018-04-23 21:01 UTC, Thibault Saunier
committed Details | Review

Description Thibault Saunier 2018-04-23 21:01:07 UTC
.
Comment 1 Thibault Saunier 2018-04-23 21:01:13 UTC
Created attachment 371301 [details] [review]
encoding-profile: Fix deserialization of a single profile

Instead of trying to guess what profile to build, just get the possible
elements to use with the specified caps and determine the
EncodingProfile from it.
Comment 2 Thibault Saunier 2018-05-01 19:17:52 UTC
Attachment 371301 [details] pushed as 77b23ea - encoding-profile: Fix deserialization of a single profile
Comment 3 Sebastian Dröge (slomo) 2018-05-14 13:55:38 UTC
Should this go into 1.14, Thibault?
Comment 4 Thibault Saunier 2018-05-14 14:32:11 UTC
(In reply to Sebastian Dröge (slomo) from comment #3)
> Should this go into 1.14, Thibault?

Not necessarily, it more or less a new feature.